--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,26 +1,34 @@
 body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
+    background: #23ab54;
 }
 
 .card {
     max-width: 100px;
     display: inline-block;
-    margin: 2px;
+    /*margin: 2px;*/
+    position: absolute;
+}
+
+.player-row {
+    height: 300px;
+    /*padding: 15px;*/
+    /*bottom: 50px;*/
+    /*position: absolute;*/
 }
 
 .player-panel {
-    width: 100%;
-    padding: 15px;
-    border-bottom: solid 1px #ccc;
-}
-
-.other-panel {
-    padding: 15px;
-}
-
-.other-panel img {
     position: relative;
+    height: 500px;
+    padding: 10px;
+}
+
+.card-container {
+    position: absolute;
     bottom: 15px;
-    left: 0;
+    border-radius: 10px;
+    border: solid 3px #efefef;
+    height: 160px;
+    width: 120px;
 }
