--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,6 +9,7 @@ body {
     display: inline-block;
     /*margin: 2px;*/
     position: absolute;
+    box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.5);
 }
 
 .player-row {
@@ -31,4 +32,19 @@ body {
     border: solid 3px #efefef;
     height: 160px;
     width: 120px;
+}
+
+.value-indicator {
+    font-size: 50px;
+    width: 150px;
+    height: 150px;
+    text-align: center;
+
+    /*border-radius: 10px;*/
+    /*border: solid 3px #efefef;*/
+    color: #efefef;
+}
+
+.btn {
+    box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.5);
 }
