--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -43,14 +43,19 @@ body {
     box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.5);
 }
 
+.horizontal-card {
+    max-width: 100px;
+}
+
 .player-row {
     height: 600px;
     padding: 0 0 50px 0px;
     bottom: 50px;
 }
 
-.filler {
+.dealer-panel {
     height: 300px;
+    margin-top: 30px;
 }
 
 .player-panel {
